network/NetworkPolicies/9/solution/policy-2-1.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-9-2-1
  namespace: np-9
spec:
  podSelector:
    matchLabels:
      app: web
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: api
    ports:
    - protocol: TCP
      port: 80
  - ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
